add readme file

--- a/main.ipynb
+++ b/main.ipynb
@@ -236,12 +236,6 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "    <div>\n",
-       "      <progress value='0' class='' max='3' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      0.00% [0/3 00:00&lt;?]\n",
-       "    </div>\n",
-       "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: left;\">\n",
@@ -253,14 +247,29 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.096618</td>\n",
+       "      <td>0.120178</td>\n",
+       "      <td>0.052632</td>\n",
+       "      <td>01:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.054058</td>\n",
+       "      <td>0.010508</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>01:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.036533</td>\n",
+       "      <td>0.020321</td>\n",
+       "      <td>0.013158</td>\n",
+       "      <td>01:20</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
-       "</table><p>\n",
-       "\n",
-       "    <div>\n",
-       "      <progress value='3' class='' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      75.00% [3/4 00:38&lt;00:12 0.1308]\n",
-       "    </div>\n",
-       "    "
+       "</table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -277,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +331,7 @@
      "output_type": "stream",
      "text": [
       "This is a: bird\n",
-      "Probability it's a bird: 1.0000\n"
+      "Probability it's a bird: 0.9999\n"
      ]
     }
    ],
